:zap: Update router and document.
