# docs/swagger.json
@@ -4,7 +4,62 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/login": {
+        "/api/v1/ping": {
+            "get": {
+                "description": "Ping-Pong",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ping"
+                ],
+                "summary": "Ping pong",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/forget-password": {
+            "post": {
+                "description": "Send forget password mail, but front-end must have \"http://xxx.xxx.xxx/reset-password/:code\" router.",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Send Forget Password Mail",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/login": {
             "post": {
                 "consumes": [
                     "multipart/form-data"
@@ -42,30 +97,7 @@
                 }
             }
         },
-        "/api/v1/ping": {
-            "get": {
-                "description": "Ping-Pong",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ping"
-                ],
-                "summary": "Ping pong",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/register": {
+        "/api/v1/user/register": {
             "post": {
                 "consumes": [
                     "multipart/form-data"
@@ -96,37 +128,6 @@
                         "type": "string",
                         "description": "Password(RSA Encrypted)",
                         "name": "password",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/test-mail": {
-            "post": {
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Send Test Mail",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Email",
-                        "name": "email",
                         "in": "formData",
                         "required": true
                     }
